--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>open-cinema-creation</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Openmovies AI Project" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
   </head>
